Splitting BaseEntity.java to Org and BaseEntity. Bump open api generator plugin version.
