# server/src/main/java/org/petka/pis/persistence/entities/Pet.java
@@ -20,7 +20,7 @@ import lombok.experimental.SuperBuilder;
 @NoArgsConstructor
 @EqualsAndHashCode(callSuper = true)
 @SQLDelete(sql = "UPDATE pet SET deleted = true WHERE id = ? AND version = ?", check = ResultCheckStyle.COUNT)
-public class Pet extends BaseEntity {
+public class Pet extends OrgBaseEntity {
 
     private String name;
 
